--- a/404.html
+++ b/404.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
-  <title>Auction App - Redirecting...</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
+  <!-- Primary Meta Tags -->
+  <title>PowerAuction - Redirecting...</title>
+  <meta name="title" content="PowerAuction - Professional Sports Auction Platform" />
+  <meta name="description" content="PowerAuction - Professional Sports Auction Platform powered by Turgut" />
+  <meta name="robots" content="noindex, nofollow" />
+
   <link rel="icon" type="image/png" href="images/sports/logo-final.png" />
   <script type="text/javascript">
     // Single Page Apps for GitHub Pages
