--- a/frontend/public/404.html
+++ b/frontend/public/404.html
@@ -1,9 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+  <!-- Google Tag Manager -->
+  <script>(function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-KDTXC4CK');</script>
+  <!-- End Google Tag Manager -->
+
   <meta charset="utf-8">
-  <title>Auction App - Redirecting...</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
+  <!-- Primary Meta Tags -->
+  <title>PowerAuction - Redirecting...</title>
+  <meta name="title" content="PowerAuction - Professional Sports Auction Platform" />
+  <meta name="description" content="PowerAuction - Professional Sports Auction Platform powered by Turgut" />
+  <meta name="robots" content="noindex, nofollow" />
+
   <link rel="icon" type="image/png" href="images/sports/logo-final.png" />
   <script type="text/javascript">
     // Single Page Apps for GitHub Pages
@@ -40,6 +59,10 @@
 </head>
 
 <body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KDTXC4CK" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
 </body>
 
 </html>
