--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,10 +2,56 @@
 <html lang="en">
 
 <head>
+    <!-- Google Tag Manager -->
+    <script>(function (w, d, s, l, i) {
+            w[l] = w[l] || []; w[l].push({
+                'gtm.start':
+                    new Date().getTime(), event: 'gtm.js'
+            }); var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-KDTXC4CK');</script>
+    <!-- End Google Tag Manager -->
+
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="PowerAuctions - Professional Sports Auction Platform powered by Turgut" />
+
+    <!-- Primary Meta Tags -->
+    <title>PowerAuction - Professional Sports Auction Platform</title>
+    <meta name="title" content="PowerAuction - Professional Sports Auction Platform" />
+    <meta name="description"
+        content="PowerAuction - Professional Sports Auction Platform powered by Turgut. Bid on exclusive sports memorabilia, collectibles, and items from your favorite teams and athletes." />
+    <meta name="keywords"
+        content="sports auction, sports memorabilia, online auction, bidding platform, sports collectibles, athlete memorabilia, team merchandise, auction platform" />
+    <meta name="author" content="PowerAuction" />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="English" />
+    <meta name="revisit-after" content="7 days" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://thepowerauction.com/" />
+    <meta property="og:title" content="PowerAuction - Professional Sports Auction Platform" />
+    <meta property="og:description"
+        content="PowerAuction - Professional Sports Auction Platform powered by Turgut. Bid on exclusive sports memorabilia, collectibles, and items from your favorite teams and athletes." />
+    <meta property="og:image" content="%PUBLIC_URL%/images/sports/logo-final.png" />
+    <meta property="og:site_name" content="PowerAuction" />
+    <meta property="og:locale" content="en_US" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://thepowerauction.com/" />
+    <meta property="twitter:title" content="PowerAuction - Professional Sports Auction Platform" />
+    <meta property="twitter:description"
+        content="PowerAuction - Professional Sports Auction Platform powered by Turgut. Bid on exclusive sports memorabilia, collectibles, and items from your favorite teams and athletes." />
+    <meta property="twitter:image" content="%PUBLIC_URL%/images/sports/logo-final.png" />
+
+    <!-- Canonical Link -->
+    <link rel="canonical" href="https://thepowerauction.com/" />
+
+    <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/images/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/images/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/images/favicon/favicon-16x16.png">
@@ -48,7 +94,46 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>PowerAuctions - Sports Auction Platform</title>
+
+    <!-- JSON-LD Structured Data for SEO -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "PowerAuction",
+      "alternateName": "Power Auction",
+      "url": "https://thepowerauction.com",
+      "description": "Professional Sports Auction Platform powered by Turgut",
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": "https://thepowerauction.com/search?q={search_term_string}",
+        "query-input": "required name=search_term_string"
+      }
+    }
+    </script>
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "PowerAuction",
+      "legalName": "The Power Auction",
+      "url": "https://thepowerauction.com",
+      "logo": "https://thepowerauction.com/images/sports/logo-final.png",
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "telephone": "+91-XXX-XXX-XXXX",
+        "contactType": "Customer Service",
+        "areaServed": "IN",
+        "availableLanguage": "en"
+      },
+      "sameAs": [
+        "https://twitter.com/powerauctions",
+        "https://facebook.com/powerauctions"
+      ]
+    }
+    </script>
+
     <!--
         These two scripts have been added for the testing, please do not edit or remove them
         -->
@@ -80,6 +165,11 @@
 </head>
 
 <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KDTXC4CK"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+    
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
