payment changes and added excel export feature

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -166,10 +166,10 @@
 
 <body>
     <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KDTXC4CK"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KDTXC4CK" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
-    
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
@@ -249,6 +249,9 @@
             person_profiles: "identified_only", // or 'always' to create profiles for anonymous users as well
         });
     </script>
+
+    <!-- Cashfree Checkout SDK -->
+    <script src="https://sdk.cashfree.com/js/v3/cashfree.js"></script>
 </body>
 
 </html>
